<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.bsh.dt.plccustomize.widget.HeaderLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personalized"
        app:isBackShow="false">

    </com.bsh.dt.plccustomize.widget.HeaderLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/my_program"
            style="@style/AppText"
            android:layout_marginTop="160dp"/>
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/reset"
            style="@style/AppText"
            android:background="@drawable/button_bg"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"/>
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:background="@drawable/frame_bg">
            <LinearLayout
                android:id="@+id/ll_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/iv_loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/img_binding_circle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>